--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ body {
     --fourth-color: #ff7e67;
 }
 
+hr {
+    border: 1px solid #888;
+}
+
 /* HEADER  */
 
 header {
@@ -95,10 +99,12 @@ header {
     top: 0;
     width: 100%;
     height: 8rem;
-    padding-left: 44%;
+    margin: auto;
+    background-color: hsl(210deg 15% 6%);
 
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 3rem;
     font-weight: bold;
 }
@@ -118,14 +124,25 @@ section .card {
     display: grid;
     border-radius: 20px;
     margin: auto;
-    width: 25%;
+    width: clamp(350px, 25%, 25%);
 }
 
-.card h1 {
+/* extra space at the bottom */
+section .card:last-child {
+    margin-bottom: 50px;
+}
+
+.card .card-header {
     background-color: var(--seccond-color);
     border-radius: 20px 20px 0px 0px;
     padding: 1rem;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-header img {
+    max-width: 2rem;
 }
 
 .card .book-info {
@@ -133,8 +150,33 @@ section .card {
     border-radius: 0px 0px 10px 10px;
     padding: 1rem;
     display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-bottom: 1.5rem;
+}
+
+.book-info .line {
+    display: flex;
     justify-content: space-between;
+    font-size: 1.1rem;
+}
+
+.status {
+    flex: 1;
+}
+
+.book-info .line p  {
+    display: flex;
     align-items: center;
+    gap: 10px;
+}
+
+.book-info .line img {
+    max-width: 2rem;
+}
+
+.book-info .line p img {
+    max-width: 2rem;
 }
 
 /* BUTTON  */
@@ -146,6 +188,7 @@ aside {
 }
 
 aside button {
+    font-size: 1.2rem;
     appearance: none;
     border: none;
     padding: 15px 40px;
@@ -154,4 +197,13 @@ aside button {
     color: gainsboro;
     font-weight: bold;
     box-shadow: 0 0 5px #999;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    align-items: center;
+    white-space: nowrap;
+}
+
+button img {
+    max-width: 2rem;
 }
