--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ section .card {
 
 /* extra space at the bottom */
 section .card:last-child {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .card .card-header {
@@ -165,7 +165,7 @@ section .card:last-child {
     flex: 1;
 }
 
-.book-info .line p  {
+.book-info .line p {
     display: flex;
     align-items: center;
     gap: 10px;
@@ -183,8 +183,8 @@ section .card:last-child {
 
 aside {
     position: fixed;
-    bottom: 5rem;
-    right: 5rem;
+    bottom: 2rem;
+    right: 6rem;
 }
 
 aside button {
@@ -206,4 +206,102 @@ aside button {
 
 button img {
     max-width: 2rem;
+}
+
+/* DIALOG  */
+
+dialog {
+    color: #999;
+    margin: auto;
+    border: none;
+    padding: 50px;
+    border-radius: 20px;
+    font-size: 1.1rem;
+    background-color: rgb(0 0 0 / 90%);
+
+    width: clamp(500px, 500px, 50%);
+}
+
+::backdrop {
+    backdrop-filter: blur(0.25rem);
+}
+
+/* FORM */
+.form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+}
+
+.form-container label {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.button-container {
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    gap: 2em;
+}
+
+input {
+    appearance: none;
+    border: 1px solid #555;
+    border-radius: 5px;
+    height: 2.5rem;
+    width: 100%;
+    color: #999;
+    background-color: #333;
+    padding-left: 1em;
+}
+
+input:hover {
+    outline: 2px solid white;
+}
+
+input:focus {
+    outline: 2px solid white;
+    box-shadow: 0px 0px 15px var(--first-color);
+}
+
+input[type="checkbox"] {
+    -webkit-appearance: none;
+    appearance: inherit;
+    color: currentColor;
+    height: 1.15em;
+    width: 1.15em;
+    border-radius: 25%;
+    margin: auto;
+    display: grid;
+    place-content: center;
+}
+
+input[type="checkbox"]:checked {
+    background-color: var(--first-color);
+    border: 2px solid var(--third-color);
+}
+
+#check-status {
+    text-align: center;
+}
+
+button {
+    text-align: center;
+    appearance: none;
+    padding: 0.7em 2em;
+    border-radius: 10px;
+    color: whitesmoke;
+    border: 2px solid white;
+}
+
+.close {
+    background-color: #ff7e67;
+}
+
+.submit {
+    background-color: #42b883;
 }
